--- a/ME421_Vibration_Activity_Oct_2023.ipynb
+++ b/ME421_Vibration_Activity_Oct_2023.ipynb
@@ -161,12 +161,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "VaedvtHAIpwV",
-        "outputId": "ce18af92-38ab-4996-a11e-25b44933267d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 600
-        }
+        },
+        "id": "VaedvtHAIpwV",
+        "outputId": "ce18af92-38ab-4996-a11e-25b44933267d"
       },
       "execution_count": 1,
       "outputs": [
@@ -250,7 +250,7 @@
         "$\n",
         "\n",
         "## 4. Small Amplitude Free Vibration\n",
-        "For free vibration ($ F_{\\text{ext}}(t) = 0 \\)):\n",
+        "For free vibration ($ F_{\\text{ext}}(t) = 0 $):\n",
         "$\n",
         "m\\ddot{x}(t) + c\\dot{x}(t) + kx(t) = 0\n",
         "$\n",
