--- a/ME421_Vibration_Activity_Oct_2023.ipynb
+++ b/ME421_Vibration_Activity_Oct_2023.ipynb
@@ -303,6 +303,43 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Estimation of Damped Natural Frequency and Amplitude of Resonance\n",
+        "\n",
+        "To estimate the **damped natural frequency** ($ \\omega_d $) and the **amplitude of resonance** ($ x_{ss,\\text{max}} $) for small amplitude vibrations, we use the following formulas:\n",
+        "\n",
+        "### 1. Damped Natural Frequency\n",
+        "\\[\n",
+        "\\omega_d = \\omega_n \\sqrt{1 - \\zeta^2}\n",
+        "\\]\n",
+        "where:\n",
+        "- $ \\omega_n $: Natural frequency ($ \\sqrt{\\frac{k}{m}} $).\n",
+        "- $ \\zeta $: Damping ratio ($ \\frac{c}{2\\sqrt{km}} $).\n",
+        "\n",
+        "### 2. Amplitude of Resonance\n",
+        "At resonance ($ \\omega = \\omega_d $), the maximum amplitude is given by:\n",
+        "\\[\n",
+        "x_{ss,\\text{max}} = \\frac{F_0}{2 m \\zeta \\omega_n^2}\n",
+        "\\]\n",
+        "where:\n",
+        "- $ F_0 $: Amplitude of the applied force.\n",
+        "- $ m $: Mass of the system.\n",
+        "- $ \\zeta $: Damping ratio.\n",
+        "- $ \\omega_n $: Natural frequency.\n",
+        "\n",
+        "### Inputs Required:\n",
+        "To compute these values, the following parameters are needed:\n",
+        "1. $ k $: Stiffness of the spring.\n",
+        "2. $ m $: Mass of the system.\n",
+        "3. $ c $: Damping coefficient.\n",
+        "4. $ F_0 $: Amplitude of the applied force.\n"
+      ],
+      "metadata": {
+        "id": "4eJHQBbsVDMW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Activity #3"
       ],
       "metadata": {
