--- a/mechanics/assignments/ME421_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/ME421_ControlSystems_Lab.ipynb
@@ -114,46 +114,168 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "kNBvNtLes7rY"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "### Translational Motion\n",
-        "Newton's Second Law states that the rate of change of linear momentum equals the net external force:\n",
-        "\\begin{equation}\n",
-        "    \\frac{d}{dt} (M \\dot{\\mathbf{o}}) = \\mathbf{f}^e + \\mathbf{f}^u.\n",
-        "\\end{equation}\n",
-        "Since $M$ is constant, we obtain:\n",
-        "\\begin{equation}\n",
-        "    \\dot{\\mathbf{o}} = \\frac{1}{M} \\mathbf{p}, \\quad \\dot{\\mathbf{p}} = \\mathbf{f}^e + \\mathbf{f}^u.\n",
-        "\\end{equation}\n",
+        "Let $\\mathbf{e}$ be an inertial frame with origin $O$ and and let $\\mathbf{b}(t)$ be an ortho-normal frame with origin $O'$ in which all the particles $P_i$ appear to be fixed as illustrated for example in the figure above. We will call $\\mathbf{b}(t)$ the body frame. Let $OO'=\\mathbf{e}o(t)$. The position of the $i^\\mathrm{th}$ point $P_i$ at a time $t$, is given by $x_i(t)$ with respect to the frame $\\mathbf{e}$ and by $X_i$\n",
+        "with respect to the body frame $\\mathbf{b}(t)$. Observe that since all points on the body appear to be fixed with respect to the body frame $\\mathbf{b}(t)$, the representation $X_i$ is independent of time. Therefore specifying $\\mathbf{b}(t)$ amounts to specifying the configuration\n",
+        "of the rigid body. Since $\\mathbf{b}(t)$ is uniquely related to the inertial frame $\\mathbf{e}$ by the rotational matrix $R(t)$, where $\\mathbf{b}(t)=\\mathbf{e}\\,R(t)$, and the position of its origin $o(t)$, the specification of $(o(t),R(t))$ amounts to the unique specification of the configuration of the rigid body with respect to the inertial frame $\\mathbf{e}$. Similarly any $(o,R)$ where $o\\in \\mathbb{R}^3$ and $R\\in \\mathrm{SO}(3)$ defines a unique configuration of the rigid body. Thus the configuration space of rigid body motion is $ \\mathbb{R}^3\\times \\mathrm{SO}(3)$ where we have denoted the space of $3\\times 3$ special orthogonal matrices by $\\mathrm{SO}(3)$.\n",
         "\n",
-        "### Rotational Motion\n",
-        "The angular momentum of the rigid body is given by:\n",
-        "\\begin{equation}\n",
-        "    \\boldsymbol{\\pi} = \\mathbb{I} \\boldsymbol{\\omega}.\n",
-        "\\end{equation}\n",
-        "Taking the time derivative,\n",
-        "\\begin{equation}\n",
-        "    \\dot{\\boldsymbol{\\pi}} = \\mathbb{I} \\dot{\\boldsymbol{\\omega}} + \\dot{\\mathbb{I}} \\boldsymbol{\\omega}.\n",
-        "\\end{equation}\n",
-        "Assuming $\\mathbb{I}$ is constant in the body frame,\n",
-        "\\begin{equation}\n",
-        "    \\dot{\\boldsymbol{\\pi}} = \\mathbb{I} \\dot{\\boldsymbol{\\omega}}.\n",
-        "\\end{equation}\n",
-        "From Euler's equations,\n",
-        "\\begin{equation}\n",
-        "    \\mathbb{I} \\dot{\\boldsymbol{\\omega}} = \\boldsymbol{\\tau}^e + \\boldsymbol{\\tau}^u.\n",
-        "\\end{equation}\n",
-        "Solving for $\\dot{\\boldsymbol{\\pi}}$,\n",
-        "\\begin{equation}\n",
-        "    \\dot{\\boldsymbol{\\pi}} = \\boldsymbol{\\tau}^e + \\boldsymbol{\\tau}^u.\n",
-        "\\end{equation}\n",
+        "The pair $(o,R)\\in \\mathbb{R}^3 \\times \\mathrm{SO}(3)$ can also be identified with a unique $4\\times 4$ matrix\n",
+        "\\begin{align}\n",
+        "E&=\\begin{bmatrix}\n",
+        "R & o \\\\ 0 & 1\\end{bmatrix}.\n",
+        "\\end{align}\n",
+        "The spcace of all such $4\\times 4$ matrices are referred to as the space of special euclidean group of matrices that is denote by $SE(3)$.\n",
         "\n",
-        "Finally, the rotational kinematics equation is given by:\n",
-        "\\begin{equation}\n",
-        "    \\dot{\\mathbf{R}} = \\hat{\\boldsymbol{\\omega}} \\mathbf{R}.\n",
-        "\\end{equation}"
+        "Recall that the quantity $\\Omega$ where $\\widehat{\\Omega}=R^T\\dot{R}$ corresponds to an instantaneous rotation of the body about the axis $\\Omega$ as expressed in the body frame $\\mathbf{b}$ by an\n",
+        "amount equal to the magnitude $||\\Omega||$ and thus that $\\Omega$ can be defined to be the **body angular velocity** of the rigid body. The $\\mathbf{e}$ frame version of this quantity $\\omega \\triangleq R\\Omega$ is defined to be the **spatial angular velocity** of the rigid body.\n",
+        "\n",
+        "The equation\n",
+        "\\begin{align}\n",
+        "\\dot{R}&=R\\widehat{\\Omega}\n",
+        "\\end{align}\n",
+        "that defines angular velocity is usually referred to as the **rigidbody kinematic** equations.\n",
+        "\n",
+        "Since $\\widehat{\\Omega}=\\widehat{R^T\\omega}=R^T\\widehat{\\omega}R$ this can also be equivalently written down as\n",
+        "\\begin{align}\n",
+        "\\dot{R}&=\\widehat{\\omega}R.\n",
+        "\\end{align}\n"
       ],
       "metadata": {
-        "id": "Jx19L6GYni7z"
+        "id": "yci5IQ3Yk_tC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uPWaHdtQtdDO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the total linear momentum of a set of particles can be written down as\n",
+        "\\begin{align}\n",
+        "p&=\\sum_{i}p_i=\\sum_{i}m_i\\left(\\dot{o}+R(\\widehat{\\Omega}{X}_i+\\dot{X}_i)\\right).\n",
+        "\\end{align}\n",
+        "In the case of a rigid body $\\dot{X}_i=0_{3\\times 1}$ and hence\n",
+        "\\begin{align}\n",
+        "p&=M(\\dot{o}+R\\widehat{\\Omega}\\bar{X})=M(\\dot{o}+\\widehat{\\omega}R\\bar{X})=M\\dot{\\bar{x}},\n",
+        "\\end{align}\n",
+        "where $M=\\sum_{i}m_i$, $\\bar{X}=\\sum_{i}m_i X_i/\\sum_{i}m_i$ is the center of mass of the rigid body represented with repect to frame $\\mathbf{b}$ fixed to the body (body frame).\n",
+        "\n",
+        "Thus we also see that that the translational kinematics are given by\n",
+        "\\begin{align}\n",
+        "\\dot{o}&=\\frac{1}{M}p-\\omega \\times R\\bar{X}.\n",
+        "\\end{align}\n",
+        "\n",
+        "To show that:\n",
+        "\n",
+        "\\begin{equation}\n",
+        "\\dot{o} = \\frac{1}{M} p,\n",
+        "\\end{equation}\n",
+        "\n",
+        "we need to demonstrate that the term $(\\omega \\times R\\bar{X})$ vanishes.\n",
+        "\n",
+        "If we assume that the reference point is chosen such that $ R\\bar{X} = 0 \\$, meaning that the position of the center of mass is used as the reference, then:\n",
+        "\n",
+        "\\begin{equation}\n",
+        "\\omega \\times R\\bar{X} = 0.\n",
+        "\\end{equation}\n",
+        "\n",
+        "Substituting this into the original equation:\n",
+        "\n",
+        "\\begin{equation}\n",
+        "\\dot{o} = \\frac{1}{M} p - 0 = \\frac{1}{M} p.\n",
+        "\\end{equation}\n",
+        "\n",
+        "Thus, we have derived the desired result.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-Wm5_mbtdigz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "EDVUaycKtoh7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Also recall that angular momentum of a point particle of mass $m_i$ about the origin $O'$ of a $\\mathbf{b}$ frame takes the form\n",
+        "\\begin{align}\n",
+        "\\pi_i&= R\\left(\\mathbb{I}_i\\Omega+m_iX_i\\times( R^T\\dot{o}+ \\dot{X}_i)\\right),\n",
+        "\\end{align}\n",
+        "in the $\\mathbf{e}$ frame and\n",
+        "\\begin{align}\n",
+        "\\Pi_i= \\left(\\mathbb{I}_i\\Omega+m_iX_i\\times(\\dot{X}_i+ R^T\\dot{o})\\right),\n",
+        "\\end{align}\n",
+        "in the $\\mathbf{b}$ frame where the quantity\n",
+        "\\begin{align}\n",
+        "\\mathbb{I}_i &\\triangleq -m_i\\widehat{X}_i^2=m_i\\left(||X_i||^2I_{3\\times 3} - X_iX_i^T\\right),\n",
+        "\\end{align}\n",
+        "is defined as the *moment of inertia* of the particle $P_i$ about the point $O'$ in the frame $\\mathbf{b}$.\n",
+        "\n",
+        "Since in a rigid body the particles are fixed with respect to the frame $\\mathbf{b}$ we have that $\\dot{X}_i=0_{3\\times 1}$ and then we have\n",
+        "\\begin{align}\n",
+        "\\pi_i&= R\\underbrace{\\left(\\mathbb{I}_i\\Omega+m_iX_i\\times R^T\\dot{o}\\right)}_{\\Pi_i},\n",
+        "\\end{align}\n",
+        "Summing them over all the particles we have that the total angulare momentum about $O'$ is given by\n",
+        "\\begin{align}\n",
+        "\\pi&=\\sum_{i}\\pi_i= R\\underbrace{\\left(\\mathbb{I}\\Omega+M\\bar{X}\\times R^T\\dot{o}\\right)}_{\\Pi},\n",
+        "\\end{align}\n",
+        "where $M=\\sum_{i}m_i$, $\\bar{X}=\\sum_{i}m_i X_i/\\sum_{i}m_i$ is the representation of the center of mass of the rigid body in the $\\mathbf{b}$ frame, and\n",
+        "\\begin{align}\n",
+        "\\mathbb{I} &\\triangleq \\sum_{i}-m_i\\widehat{X}_i^2=\\sum_{i}m_i\\left(||X_i||^2I_{3\\times 3} - X_iX_i^T\\right),\n",
+        "\\end{align}\n",
+        "is defined as the *moment of inertia* of the body about the point $O'$ in the frame $\\mathbf{b}$. It is easy to see that this is a symmetric positive definite matrix if all the ponts are not co-linear.\n",
+        "\n",
+        "Since $p=M\\dot{\\bar{x}}=M(\\dot{o}+R(\\Omega\\times \\bar{X}))$ we see that $M\\dot{o}\\times \\dot{\\bar{x}}=\\dot{o}\\times p=-R(\\Omega \\times \\bar{X})\\times p$ we also see that\n",
+        "\\begin{align}\n",
+        "\\pi&=R\\left(\\mathbb{I}\\Omega +M\\bar{X}\\times R^T\\left(\\frac{1}{M}p-R(\\Omega\\times \\bar{X})\\right)\\right)\\\\\n",
+        "&=R\\left(\\mathbb{I}\\Omega +\\bar{X}\\times R^Tp+M\\bar{X}\\times \\bar{X} \\times\\Omega\\right)\\\\\n",
+        "&=R\\left((\\mathbb{I}+M\\widehat{\\bar{X}}^2)\\Omega +\\bar{X}\\times R^Tp)\\right)\\\\\n",
+        "&=R\\left(\\mathbb{I}_c\\Omega +\\bar{X}\\times R^Tp)\\right).\n",
+        "\\end{align}\n",
+        "where\n",
+        "\\begin{align*}\n",
+        "\\mathbb{I}_c&\\triangleq \\mathbb{I}+M\\widehat{\\bar{X}}^2\n",
+        "\\end{align*}\n",
+        "is the inertia tensor of the body with respect to a frame that is parallel to $\\mathbf{b}$ and origin coinciding with the center of mass of the object, $O_c$.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*When written as\n",
+        "\\begin{align}\n",
+        "\\mathbb{I}&=\\mathbb{I}_c-M\\widehat{\\bar{X}}^2\n",
+        "\\end{align}\n",
+        "this turns out to be the parallel axis theorem.*\n",
+        "\n",
+        "Also note that since $\\Omega =R^T\\omega$ we have\n",
+        "\\begin{align}\n",
+        "\\pi&=R\\left(\\mathbb{I}_c\\Omega +\\bar{X}\\times R^Tp)\\right),\\\\\n",
+        "&=(R\\mathbb{I}_cR^T)\\omega +R\\bar{X}\\times p,\\\\\n",
+        "&=\\mathbb{I}_c^R\\omega +R\\bar{X}\\times p.\n",
+        "\\end{align}\n",
+        "where\n",
+        "\\begin{align}\n",
+        "\\mathbb{I}_c^R\\triangleq R\\mathbb{I}_cR^T=R(\\mathbb{I}+M\\widehat{\\bar{X}}^2)R^T,\n",
+        "\\end{align}\n",
+        "is defined to be the *locked inertia tensor* in the body. It can be shown that $\\mathbb{I}_c^R$ is the moment of inertia tensor of the body with respect to a frame that is parallel to $\\mathbf{e}$ and  orign coinciding with the center of"
+      ],
+      "metadata": {
+        "id": "eaiX8M6ZhXcL"
       }
     },
     {
@@ -251,7 +373,7 @@
           "height": 521
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -384,7 +506,7 @@
           "height": 487
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -497,7 +619,7 @@
           "height": 487
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
