--- a/mechanics/assignments/ME421_ControlSystems_Lab.ipynb
+++ b/mechanics/assignments/ME421_ControlSystems_Lab.ipynb
@@ -280,6 +280,109 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8GrqrjIPvtg1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Derivation of General Rigid Body Equations of Motion**\n",
+        "\n",
+        "\n",
+        "Consider a rigid body moving in space. Let $\\mathbf{b}$ be a body-fixed frame with its origin coinciding with the center of mass of the body. Let:\n",
+        "\n",
+        "- $M$ be the total mass of the body,\n",
+        "- $\\mathbb{I}$ be the inertia tensor of the body with respect to the body-fixed frame $\\mathbf{b}$,\n",
+        "- $f^e$ be the resultant total external forces acting on the particles of the body,\n",
+        "- $\\tau^e$ be the total resultant of the moments of the external forces about the center of mass of the body.\n",
+        "\n",
+        "We aim to show that the motion of a general rigid body is described by the following equations in an inertial frame $\\mathbf{e}$, where the moments are taken about the center of mass:\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\dot{o}= \\frac{1}{M}p\n",
+        "\\end{align}\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\dot{R} = \\widehat{\\omega}R\n",
+        "\\end{align}\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\dot{p}= f^e + f^u\n",
+        "\\end{align}\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\dot{\\pi} = \\tau^e + \\tau^u\n",
+        "\\end{align}\n",
+        "\n",
+        "where the angular velocity $\\omega$ is related to the angular momentum $\\pi$ by:\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\omega = (\\mathbb{I}_c^R)^{-1}\\pi.\n",
+        "\\end{align}\n",
+        "\n",
+        "Here, we have decomposed the forces and moments into non-manipulatable (external) and manipulatable (control) parts, where the manipulatable (control) part is denoted by the superscript $u$.\n",
+        "\n",
+        "\n",
+        "The position of the center of mass of the rigid body is denoted by $o$ in the inertial frame. The total linear momentum is given by:\n",
+        "\\begin{align}\n",
+        "p = M\\dot{o}.\n",
+        "\\end{align}\n",
+        "\n",
+        "Differentiating both sides with respect to time, we obtain:\n",
+        "\\begin{align}\n",
+        "\\dot{p} = M\\ddot{o}.\n",
+        "\\end{align}\n",
+        "\n",
+        "Since Newton's second law states that the rate of change of linear momentum equals the total external force acting on the body, we have:\n",
+        "\\begin{align}\n",
+        "M\\ddot{o} = f^e + f^u.\n",
+        "\\end{align}\n",
+        "\n",
+        "Rearranging, we get:\n",
+        "\\begin{align}\n",
+        "\\dot{o} = \\frac{1}{M}p.\n",
+        "\\end{align}\n",
+        "\n",
+        "**Rotational Kinematics**\n",
+        "\n",
+        "The orientation of the rigid body is given by a rotation matrix $R \\in SO(3)$, which relates the body-fixed frame $\\mathbf{b}$ to the inertial frame $\\mathbf{e}$. The angular velocity $\\omega$ in the inertial frame is given by:\n",
+        "\\begin{align}\n",
+        "\\dot{R} = \\widehat{\\omega}R.\n",
+        "\\end{align}\n",
+        "\n",
+        "This is the fundamental equation describing the rotational kinematics of the rigid body.\n",
+        "\n",
+        "**Equations of Motion**\n",
+        "\n",
+        "The total angular momentum of the rigid body about its center of mass in the inertial frame is:\n",
+        "\\begin{align}\n",
+        "\\pi = \\mathbb{I}_c^R \\omega.\n",
+        "\\end{align}\n",
+        "\n",
+        "Differentiating both sides with respect to time, we obtain:\n",
+        "\\begin{align}\n",
+        "\\dot{\\pi} = \\mathbb{I}_c^R \\dot{\\omega} + \\dot{\\mathbb{I}}_c^R \\omega.\n",
+        "\\end{align}\n",
+        "\n",
+        "Since the inertia tensor $\\mathbb{I}_c^R$ changes due to the rotation of the body, we substitute $\\mathbb{I}_c^R = R\\mathbb{I}_c R^T$ and simplify to get:\n",
+        "\\begin{align}\n",
+        "\\dot{\\pi} = \\tau^e + \\tau^u.\n",
+        "\\end{align}\n",
+        "\n",
+        "This represents the rotational dynamics of the rigid body.\n",
+        "\n",
+        "\n",
+        "\n",
+        "We have derived the governing equations of motion for a general rigid body in an inertial frame. These equations provide a compact representation of the rigid body's translational and rotational dynamics. The force and moment components have been separated into manipulatable (control) and unmanipulatable (external) parts, which are useful for control applications in robotics, aerospace, and mechanical systems."
+      ],
+      "metadata": {
+        "id": "q3ziqIY8vuLA"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#Task#2"
       ],
